--- a/template/.devcontainer/.env.devcontainer
+++ b/template/.devcontainer/.env.devcontainer
@@ -11,7 +11,12 @@ DEBUG_MODE=true
 ALLOWED_CREDENTIAL_ORIGINS=*.example.com
 
 # MySQL/MariaDB configuration
-MYSQL_URI=root:root@tcp(db:3306)/go_skeleton?parseTime=true
+MYSQL_URI=root:root@tcp(localhost:3306)/PROJECT_DB_NAME?parseTime=true
+MYSQL_USERNAME=root
+MYSQL_PASSWORD=root
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_DATABASE_NAME=PROJECT_DB_NAME
 MYSQL_POOL=50
 MYSQL_SLOW_LOG_THRESHOLD=300
 
